<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="10">

    <EditText
        android:id="@+id/editText_country_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/country_code"
        android:importantForAutofill="no"
        android:inputType="phone|number"
        android:maxLength="3"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="7"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/number"
        android:importantForAutofill="no"
        android:inputType="phone|number"
        android:maxLength="10"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/btn_delete_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:background="@drawable/delete_icon"
        android:contentDescription="@string/delete" />

</LinearLayout>